--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "hello.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node hello.js"
+    "start": "node desafio_1.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/dacehell/helloNode/issues"
   },
-  "homepage": "https://github.com/dacehell/helloNode#readme"
+  "homepage": "https://github.com/dacehell/helloNode#readme",
+  "dependencies": {
+    "prettier": "^2.3.2"
+  }
 }
